fix alignment for tnc

--- a/src/sass/language_base.scss
+++ b/src/sass/language_base.scss
@@ -33,6 +33,9 @@ body.JA{
 }
 /*Vietnamese Language */
 body.VI{
-		font-family: arial!important;
+	font-family: arial!important;
+	li.tm-li-2 {
+		margin-right: 5px!important;
+	}
 }
 
